changes to ensure gallery button has black background on iOS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -379,6 +379,7 @@
 
     .gallery-button {
         background-color: black;
+        padding: 40px;
     }
 
 
